kubernetes/kubernetes/monitoring/kube-dash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-dashboard-ingress
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/instance: kubernetes-dashboard
  annotations:
    cert-manager.io/issuer: "cert-manager-issuer-kube-dash"
    # acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - kube-dash.sample-click.net
    secretName: kube-dashboard-tls
  ingressClassName: nginx
  rules:
  - host: kube-dash.sample-click.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard-kong-proxy
            port:
              number: 443
